--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
+    implementation 'org.testng:testng:7.11.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.18'
+    implementation 'io.appium:java-client:8.3.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
