--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,14 @@ dependencies {
     implementation 'org.testng:testng:7.11.0'
     implementation 'ch.qos.logback:logback-classic:1.5.18'
     implementation 'io.appium:java-client:8.3.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+    testCompileOnly 'org.projectlombok:lombok:1.18.28'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
+
 }
+
 
 test {
     useTestNG()
